# reef

./: .gitignore  Cargo.toml  README.md  build.rs
crates/cargo-reef/: Cargo.toml
crates/cargo-reef/src/: main.rs
crates/cargo-reef/src/schema/: cfg.rs  diff.rs  emit.rs  introspect.rs  ir.rs  mod.rs  parse.rs  render.rs  types.rs
crates/cargo-reef/template/: .env.example  .gitignore  CLAUDE.md  Cargo.toml.in  Dioxus.toml  README.md  build.rs
crates/cargo-reef/template/.cargo/: config.toml
crates/cargo-reef/template/.config/: nextest.toml
crates/cargo-reef/template/.github/workflows/: ci.yml
crates/cargo-reef/template/.reef/: config.toml
crates/cargo-reef/template/assets/: main.css  tailwind.css
crates/cargo-reef/template/migrations/: 20260425_120000_init.sql
crates/cargo-reef/template/src/: main.rs  middleware.rs  routes.rs  types.rs
crates/cargo-reef/template/src/app/: layout.rs  mod.rs
crates/cargo-reef/template/src/app/components/: mod.rs  splash.rs
crates/cargo-reef/template/src/server/: mod.rs  queries.rs
crates/cargo-reef/template/src/server/db/: mod.rs
crates/reef/: Cargo.toml
crates/reef-macros/: Cargo.toml
crates/reef-macros/src/: lib.rs
crates/reef/src/: json.rs  lib.rs
docs/: README.md  build.md  cli.md  config-schema.md  db-push.md  deploy.md  manifesto.md  migrations.md  routes-generation.md  ruleset.md
src/: main.rs
template/: .editorconfig  CLAUDE.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
template/assets/: main.css
template/migrations/: 20260425_120000_init.sql
template/src/api/: mod.rs
template/src/app/: layout.rs
template/src/app/components/: splash.rs
template/src/server/: actions.rs  mod.rs
template/src/server/db/: mod.rs  schema.rs
