[workspace]
resolver = "2"
members = [
    "crates/cargo-reef",
    "crates/reef",
    "crates/reef-macros",
]
# The template lives inside this directory tree but is NOT a workspace member —
# it's the source that gets embedded into the cargo-reef binary at compile
# time and copied out by `cargo reef new`. Without this exclude, Cargo would
# try to absorb template/Cargo.toml into the workspace and fail because the
# template targets a different dep set (Dioxus, libsql, etc.).
exclude = ["template"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# Points at the post-rename URL (reef-rs/cargo-reef → reef-rs/reef). GitHub
# auto-redirects in either direction, so this resolves correctly even before
# the rename happens.
repository = "https://github.com/reef-rs/reef"
homepage = "https://reef.rs"
authors = ["Matt Drulia"]

[workspace.dependencies]
# Workspace-internal crates — kept in lockstep
reef-macros = { version = "0.2.0", path = "crates/reef-macros" }

# Shared external deps
anyhow = "1"
serde = { version = "1", features = ["derive"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
