[package]
name = "reef"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Reef framework runtime — schema-as-code marker attributes (today), Db helpers + Dioxus re-exports (planned)."
documentation = "https://docs.rs/reef"
readme = "../../README.md"
keywords = ["fullstack", "dioxus", "libsql", "framework"]
categories = ["development-tools", "web-programming"]

[dependencies]
reef-macros.workspace = true
serde.workspace = true
